--- a/package.json
+++ b/package.json
@@ -1,19 +1,19 @@
 {
-  "name": "excel-data-viewer",
+  "name": "ccs-report-app",
   "version": "1.0.0",
-  "description": "Modern React application for uploading and viewing Excel files",
+  "description": "Excel upload and processing application",
+  "main": "index.js",
   "scripts": {
-    "dev": "concurrently \"npm run server:dev\" \"npm run client:dev\"",
-    "server:dev": "cd server && npm run dev",
-    "client:dev": "cd client && npm run dev",
-    "server:start": "cd server && npm start",
-    "client:build": "cd client && npm run build",
-    "install:all": "npm install && cd server && npm install && cd ../client && npm install"
+    "dev": "cd client && npm run dev",
+    "build": "cd client && npm run build",
+    "start": "cd client && npm run preview"
   },
-  "devDependencies": {
-    "concurrently": "^8.2.2"
+  "dependencies": {
+    "multiparty": "^4.2.3",
+    "xlsx": "^0.18.5"
   },
-  "keywords": ["excel", "react", "upload", "data-grid", "typescript"],
+  "devDependencies": {},
+  "keywords": ["excel", "upload", "react", "vercel"],
   "author": "",
   "license": "MIT"
 } 
